cmake_minimum_required(VERSION 2.8)
project(mpv)

# remove -g flag if you want to build release
#set(CMAKE_C_FLAGS  "-Wall -std=c11 -O2 -g -Werror=implicit-function-declaration -Wno-error=deprecated-declarations -Wno-error=unused-function -Wempty-body -Wdisabled-optimization -Wstrict-prototypes', '-Wno-format-zero-length -Werror=format-security -Wno-redundant-decls -Wvla -Wno-format-truncation -Wimplicit-fallthrough -fno-math-errno -Wall -Wundef -Wmissing-prototypes  -Wshadow -Wno-switch -Wparentheses -Wpointer-arith -Wno-pointer-sign -Wno-unused-result " )
set(CMAKE_C_FLAGS "-g -O2")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -fomit-frame-pointer -pthread ")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wdeclaration-after-statement -Wall -Wdisabled-optimization -Wpointer-arith -Wredundant-decls -Wwrite-strings -Wtype-limits -Wundef -Wmissing-prototypes -Wno-pointer-to-int-cast -Wstrict-prototypes -Wempty-body -Wno-parentheses -Wno-switch -Wno-format-zero-length -Wno-pointer-sign -O3 -fno-math-errno -fno-signed-zeros -fno-tree-vectorize -Werror=format-security -Werror=implicit-function-declaration -Werror=missing-prototypes -Werror=return-type -Werror=vla -Wformat -Wno-maybe-uninitialized")
message("c flags:\n"  ${CMAKE_C_FLAGS})
#寻找第三方库，比如SDL
find_package(PkgConfig REQUIRED)
find_package(SDL2 REQUIRED)

add_definitions( 
    -D_ISOC99_SOURCE
    -D_GNU_SOURCE
    -D_FILE_OFFSET_BITS=64
    )

include_directories(
    ./build
    ./
    /usr/include/libdrm
    /usr/include/SDL2
    /usr/include/lua5.1
    /usr/include/uchardet
    /usr/include/
    )
#里面每个list填写各个库需要的文件
list(APPEND mpv_srcs
    audio/aframe.c
    audio/chmap_sel.c
    audio/filter/af_format.c
    sub/osd.c
    osdep/semaphore_osx.c
    build/generated/wayland/idle-inhibit-unstable-v1.c
    build/generated/wayland/presentation-time.c
    build/generated/wayland/xdg-decoration-unstable-v1.c
    video/out/vo_caca.c
    input/keycodes.c
    video/out/vo.c
    input/ipc-unix.c
    video/out/opengl/utils.c
    input/ipc.c
    video/out/opengl/ra_gl.c
    input/input.c
    video/out/opengl/oml_sync.c
    input/event.c
    video/out/opengl/libmpv_gl.c
    input/cmd.c
    video/out/opengl/hwdec_drmprime_drm.c
    filters/user_filters.c
    video/out/opengl/formats.c
    filters/frame.c
    video/out/opengl/egl_helpers.c
    filters/filter.c
    video/out/opengl/context_x11egl.c
    filters/f_utils.c
    video/out/opengl/context_wayland.c
    filters/f_swscale.c
    video/out/opengl/context_drm_egl.c
    filters/f_swresample.c
    video/out/opengl/context.c
    filters/f_output_chain.c
    video/img_format.c
    build/generated/wayland/xdg-shell.c
    video/out/libmpv_sw.c
    filters/f_hwtransfer.c
    video/out/hwdec/hwdec_vaapi_gl.c
    filters/f_demux_in.c
    video/out/hwdec/hwdec_vaapi.c
    filters/f_decoder_wrapper.c
    video/out/gpu/video_shaders.c
    filters/f_auto_filters.c
    video/out/gpu/video.c
    filters/f_autoconvert.c
    video/out/gpu/utils.c
    filters/f_async_queue.c
    video/out/gpu/user_shaders.c
    demux/timeline.c
    video/out/gpu/spirv.c
    demux/packet.c
    video/out/gpu/shader_cache.c
    demux/ebml.c
    video/out/gpu/ra.c
    demux/demux_timeline.c
    video/out/gpu/osd.c
    demux/demux_raw.c
    video/out/gpu/libmpv_gpu.c
    demux/demux_playlist.c
    video/out/gpu/lcms.c
    demux/demux_null.c
    video/out/gpu/hwdec.c
    demux/demux_mkv_timeline.c
    video/out/gpu/error_diffusion.c
    demux/demux_mkv.c
    video/out/gpu/context.c
    demux/demux_mf.c
    video/out/filter_kernels.c
    demux/demux_lavf.c
    video/out/drm_prime.c
    demux/demux_edl.c
    video/out/drm_common.c
    demux/demux_disc.c
    video/out/drm_atomic.c
    demux/demux_cue.c
    video/out/dr_helper.c
    demux/demux.c
    ta/ta_utils.c
    video/out/dither.c
    stream/stream_concat.c
    demux/cache.c
    ta/ta_talloc.c
    video/out/bitmap_packer.c
    stream/stream_cb.c
    demux/cue.c
    ta/ta.c
    video/out/aspect.c
    stream/stream_bluray.c
    demux/codec_tags.c
    osdep/subprocess-posix.c
    video/mp_image_pool.c
    stream/stream_avdevice.c
    common/version.c
    osdep/subprocess.c
    video/mp_image.c
    stream/stream.c
    options/parse_configfile.c
    stream/cookies.c
    common/stats.c
    video/out/vo_tct.c
    audio/out/ao.c
    video/image_writer.c
    osdep/path-unix.c
    player/video.c
    common/recorder.c
    osdep/polldev.c
    video/image_loader.c
    player/sub.c
    common/playlist.c
    osdep/timer-linux.c
    video/hwdec.c
    player/scripting.c
    common/msg.c
    osdep/timer.c
    video/fmt-conversion.c
    player/screenshot.c
    common/encode_lavc.c
    osdep/threads.c
    video/filter/vf_vdpaupp.c
    player/playloop.c
    common/common.c
    osdep/io.c
    video/filter/vf_vavpp.c
    player/osd.c
    common/codecs.c
    osdep/terminal-unix.c
    video/filter/vf_sub.c
    player/misc.c
    video/out/opengl/common.c
    misc/bstr.c
    video/filter/vf_gpu.c
    player/main.c
    common/av_common.c
    video/vdpau.c
    video/filter/vf_format.c
    player/loadfile.c
    audio/out/buffer.c
    video/vaapi.c
    video/filter/refqueue.c
    player/external_files.c
    audio/out/ao_pulse.c
    video/sws_utils.c
    video/decode/vd_lavc.c
    player/configfiles.c
    audio/out/ao_pcm.c
    video/repack.c
    video/csputils.c
    player/command.c
    audio/out/ao_null.c
    video/out/x11_common.c
    sub/sd_lavc.c
    player/client.c
    audio/out/ao_lavc.c
    video/out/win_state.c
    sub/sd_ass.c
    player/audio.c
    audio/out/ao_jack.c
    video/out/wayland_common.c
    sub/osd_libass.c
    options/path.c
    common/tags.c
    sub/lavc_conv.c
    video/out/vo_image.c
    stream/stream_mf.c
    audio/format.c
    options/parse_commandline.c
    video/out/vo_drm.c
    sub/img_convert.c
    options/options.c
    audio/fmt-conversion.c
    sub/filter_sdh.c
    options/m_property.c
    audio/filter/af_scaletempo2_internals.c
    video/out/vo_xv.c
    sub/filter_regex.c
    common/av_log.c
    filters/f_lavfi.c
    video/out/vo_x11.c
    sub/draw_bmp.c
    options/m_config_frontend.c
    audio/filter/af_scaletempo.c
    video/out/vo_wlshm.c
    sub/dec_sub.c
    options/m_config_core.c
    audio/filter/af_rubberband.c
    video/out/vo_vdpau.c
    sub/ass_mp.c
    misc/thread_tools.c
    audio/filter/af_lavcac3enc.c
    video/out/vo_vaapi.c
    stream/stream_null.c
    audio/out/ao_alsa.c
    misc/rendezvous.c
    misc/dispatch.c
    stream/stream_edl.c
    video/out/vo_null.c
    audio/filter/af_drop.c
    stream/stream_memory.c
    options/m_option.c
    video/vdpau_mixer.c
    video/out/vo_libmpv.c
    stream/stream_lavf.c
    misc/natural_sort.c
    audio/decode/ad_lavc.c
    video/out/vo_lavc.c
    stream/stream_file.c
    misc/thread_pool.c
    misc/node.c
    audio/chmap.c
    audio/decode/ad_spdif.c
    video/out/vo_gpu.c
    audio/filter/af_scaletempo2.c
    stream/stream_slice.c
    misc/json.c
    misc/charset_conv.c
    osdep/main-fn-unix.c
    build/config.h
    )
#选择动态库还是静态图
#SHARED
#STATIC
add_library(mpv SHARED ${mpv_srcs})
target_compile_definitions(mpv PRIVATE BUILDING_mpv)
add_executable(mpv1 ${mpv_srcs})

#链接各个库的依赖，根据config.sh文件里面的内容书写
target_link_libraries(mpv
    avcodec
    avdevice
    avfilter
    avformat
    avutil
    swresample
    swscale
    -lm
    -lva-drm
    -lwayland-client
    -lwayland-cursor
    -ljack
    -lz
    -ldl
    -lva
    -ldrm
    -lasound
    -lcaca
    -lpulse
    -lXv
    -lX11
    -lXext
    -lrubberband
    -lass
    -lbluray
    -lva-x11
    -lvdpau
    -lXinerama
    -lXrandr
    -lXss
    -lwayland-egl
    -lxkbcommon
    -llcms2
    -lEGL
    -lgbm
    -lva-wayland
    -ljpeg
    -luchardet
    )

target_link_libraries(mpv1
    avcodec
    avdevice
    avfilter
    avformat
    avutil
    swresample
    swscale
    -lm
    -lva-drm
    -lwayland-client
    -lwayland-cursor
    -ljack
    -lz
    -ldl
    -lva
    -ldrm
    -lasound
    -lcaca
    -lpulse
    -lXv
    -lX11
    -lXext
    -lrubberband
    -lass
    -lbluray
    -lva-x11
    -lvdpau
    -lXinerama
    -lXrandr
    -lXss
    -lwayland-egl
    -lxkbcommon
    -llcms2
    -lEGL
    -lgbm
    -lva-wayland
    -ljpeg
    -luchardet
    )
